--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,19 +19,19 @@ zuul:
       url: http://localhost:8081
 #      url: http://172.17.0.4:8081
       path: /auth-ms/**
-    project-ms:
-      url: http://localhost:8082
+    invoice-ms:
+      url: http://localhost:3939
 #      url: http://172.17.0.5:8082
-      path: /project-ms/**
-    task-ms:
-      url: http://localhost:8083
-      path: /task-ms/**
-    notifs-ms:
-      url: http://localhost:8084
-      path: /notifs-ms/**
-    upload-ms:
-      url: http://localhost:8085
-      path: /upload-ms/**
+      path: /invoice-ms/**
+ #   task-ms:
+  #    url: http://localhost:8083
+   #   path: /task-ms/**
+    #notifs-ms:
+     # url: http://localhost:8084
+      #path: /notifs-ms/**
+   # upload-ms:
+    #  url: http://localhost:8085
+     # path: /upload-ms/**
 
 
 logging:
